--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
           extend: {
             colors: {
               clifford: "#da373d",
+              penguin: "#FFFBF0",
+              jacketprice: "#FABE4C",
             },
           },
         },
@@ -20,6 +22,255 @@
     </script>
   </head>
   <body>
-    <h1 class="bg-purple-300 text-3xl font-bold">My Header</h1>
+    <header class="bg-penguin pb-32 pt-12">
+      <section class="container mx-auto sm:flex items-center justify-around">
+        <div class="space-y-4">
+          <h1 class="text-3xl sm:text-5xl uppercase font-bold">
+            <span class="text-yellow-400">Be the penguins</span>
+            <br />
+            <span>Of winter</span>
+          </h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis
+            illo reiciendis doloremque sapiente facilis assumenda cum,
+            temporibus
+          </p>
+          <button
+            class="uppercase rounded-xl bg-lime-600 py-5 px-7 text-white font-semibold"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-6 w-6 inline"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
+              />
+            </svg>
+            Buy now
+          </button>
+        </div>
+        <div class="pt-4 sm:pt-0">
+          <img class="w-3/4 sm:w-full" src="./images/model.png" alt="" />
+        </div>
+      </section>
+    </header>
+    <main class="container mx-auto">
+      <!-- Women jacket -->
+      <section class="pb-10">
+        <h2 class="text-5xl font-bold uppercase">Women jacket</h2>
+        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-7 rounded-xl">
+          <!-- jacket 1 -->
+          <div class="p-4 shadow-lg rounded-xl">
+            <div class="p-5 bg-slate-100 rounded-lg">
+              <img src="./images/jacket-1.png" alt="" />
+            </div>
+            <h3 class="text-3xl font-semibold">Yellow coat jacket</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
+              tempora neque voluptatum?
+            </p>
+            <div class="flex justify-between">
+              <h2 class="text-5xl font-bold text-jacketprice">$234</h2>
+              <button
+                class="uppercase rounded-xl bg-lime-600 py-5 px-7 text-white font-semibold"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-6 w-6 inline"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
+                  />
+                </svg>
+                Buy now
+              </button>
+            </div>
+          </div>
+          <!-- jacket 2 -->
+          <div class="p-4 shadow-lg rounded-xl">
+            <div class="p-5 bg-slate-100 rounded-xl">
+              <img src="./images/jacket-2.png" alt="" />
+            </div>
+            <h3 class="text-3xl font-semibold">Yellow coat jacket</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
+              tempora neque voluptatum?
+            </p>
+            <div class="flex justify-between">
+              <h2 class="text-5xl font-bold text-jacketprice">$234</h2>
+              <button
+                class="uppercase rounded-xl bg-lime-600 py-5 px-7 text-white font-semibold"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-6 w-6 inline"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
+                  />
+                </svg>
+                Buy now
+              </button>
+            </div>
+          </div>
+          <!-- jacket 3 -->
+          <div class="p-4 shadow-lg rounded-xl">
+            <div class="p-5 bg-slate-100 rounded-xl">
+              <img src="./images/jacket-3.png" alt="" />
+            </div>
+            <h3 class="text-3xl font-semibold">Yellow coat jacket</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
+              tempora neque voluptatum?
+            </p>
+            <div class="flex justify-between">
+              <h2 class="text-5xl font-bold text-jacketprice">$234</h2>
+              <button
+                class="uppercase rounded-xl bg-lime-600 py-5 px-7 text-white font-semibold"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-6 w-6 inline"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
+                  />
+                </svg>
+                Buy now
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Men jacket -->
+      <section class="pb-10">
+        <h2 class="text-5xl font-bold uppercase">Man jacket</h2>
+        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-7 rounded-xl">
+          <!-- jacket 1 -->
+          <div class="p-4 shadow-lg rounded-xl">
+            <div class="p-5 bg-slate-100 rounded-lg">
+              <img src="./images/jacket-4.png" alt="" />
+            </div>
+            <h3 class="text-3xl font-semibold">Yellow coat jacket</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
+              tempora neque voluptatum?
+            </p>
+            <div class="flex justify-between">
+              <h2 class="text-5xl font-bold text-jacketprice">$234</h2>
+              <button
+                class="uppercase rounded-xl bg-lime-600 py-5 px-7 text-white font-semibold"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-6 w-6 inline"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
+                  />
+                </svg>
+                Buy now
+              </button>
+            </div>
+          </div>
+          <!-- jacket 2 -->
+          <div class="p-4 shadow-lg rounded-xl">
+            <div class="p-5 bg-slate-100 rounded-xl">
+              <img src="./images/jacket-5.png" alt="" />
+            </div>
+            <h3 class="text-3xl font-semibold">Yellow coat jacket</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
+              tempora neque voluptatum?
+            </p>
+            <div class="flex justify-between">
+              <h2 class="text-5xl font-bold text-jacketprice">$234</h2>
+              <button
+                class="uppercase rounded-xl bg-lime-600 py-5 px-7 text-white font-semibold"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-6 w-6 inline"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
+                  />
+                </svg>
+                Buy now
+              </button>
+            </div>
+          </div>
+          <!-- jacket 3 -->
+          <div class="p-4 shadow-lg rounded-xl">
+            <div class="p-5 bg-slate-100 rounded-xl">
+              <img src="./images/jacket-6.png" alt="" />
+            </div>
+            <h3 class="text-3xl font-semibold">Yellow coat jacket</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
+              tempora neque voluptatum?
+            </p>
+            <div class="flex justify-between">
+              <h2 class="text-5xl font-bold text-jacketprice">$234</h2>
+              <button
+                class="uppercase rounded-xl bg-lime-600 py-5 px-7 text-white font-semibold"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-6 w-6 inline"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
+                  />
+                </svg>
+                Buy now
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
