--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
       </section>
     </header>
-    <main class="container mx-auto">
+    <main class="container mx-auto bg-[#e5e5e5] p-3">
       <!-- Women jacket -->
       <section class="pb-10">
         <h2 class="text-5xl font-bold uppercase">Women jacket</h2>
@@ -271,6 +271,47 @@
           </div>
         </div>
       </section>
+      <!-- our benifit -->
+      <section>
+        <div class="grid grid-cols-2 gap-7">
+          <div class="rounded-lg flex bg-white p-6">
+            <img class="w-20 h-20" src="./images/house.png" alt="" />
+            <div class="ml-4">
+              <h4 class="text-2xl">Find the perfect fit</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Maiores atque error saepe.
+              </p>
+            </div>
+          </div>
+          <div class="row-span-3 my-auto p-4">
+            <img src="./images/shopping.png" alt="" />
+          </div>
+          <div class="rounded-lg flex bg-white p-6">
+            <img class="w-20 h-20" src="./images/house.png" alt="" />
+            <div class="ml-4">
+              <h4 class="text-2xl">Find the perfect fit</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Maiores atque error saepe.
+              </p>
+            </div>
+          </div>
+          <div class="rounded-lg flex bg-white p-6">
+            <img class="w-20 h-20" src="./images/house.png" alt="" />
+            <div class="ml-4">
+              <h4 class="text-2xl">Find the perfect fit</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Maiores atque error saepe.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer>
+      <p>Buy from us</p>
+    </footer>
   </body>
 </html>
